terraform/modules/ec2/main.tf
resource "aws_security_group" "app_sg" {
  name = "dev-app-sg"

  ingress {
    description = "Allow SSH traffic"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Allow SSH from anywhere (not recommended for production)
  }

  ingress {
    description = "Allow HTTP traffic"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTPS traffic"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "app" {
  ami = "ami-0e294ce625e6437e2"
  instance_type = "t3.micro"
  # key_name = aws_key_pair.ansible_config_key.key_name

  vpc_security_group_ids = [aws_security_group.app_sg.id]

    tags = {
        Name = "dev-app-instance"
    }
}

# resource "aws_key_pair" "ansible_config_key" {
#   key_name = "${var.environment}-key"
#   public_key = file(var.public_key_path)
# }
